# tabu-neuro-swipe

./: README.md  pyproject.toml
src/: config.yaml  constants.py  extract_data_from_json.py  fcom.py  get_prediction.py  model.py  save_images.py  train.py
